--- a/VICTOR 3B/index.html
+++ b/VICTOR 3B/index.html
@@ -10,33 +10,51 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano<span></span></h2>
+        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">ter mais tempo para jogar</button>
-                <button class="botao">organizar meu dinheiro</button>
-                <button class="botao">aprender a ser pontual</button>
+                <button class="botao ativo">Aprender para ensinar</button>
+                <button class="botao">Manter minhas contas em dia</button>
+                <button class="botao">Continuar a ser pontual e profissional </button>
                 <button class="botao">Ter mais tempo para a família</button>
             </div>
-
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">ter mais tempo para jogar</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Aprender para ensinar</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias0">7</p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas0">7</p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min0">7</p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg0">7</p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
+                    </div>
+                </div>
+                    </div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">estudar</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">organizar meu dinheiro</h3>
+                    <h3 class="aba-conteudo-titulo-principal">continuar a ser pontuak</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">aprender a ser pontual</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
-                </div>
-                <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Ter mais tempo para a família</h3>
+                    <h3 class="aba-conteudo-titulo-principal">ter mais tempo para amigos e namorada </h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
                 </div>
@@ -47,15 +65,8 @@
 
     <script src="main.js"></script>
 </body>
-
+ 
 </html>
-
-
-
-
-
-
-
 
 
 
